# personal-finance-assistant-ai-agent

./: .gitignore  Project.md  README.md  dev_log.md  pyproject.toml  requirements.txt
backend/: __init__.py  database.py  finance.db  main.py  models.py  requirements.txt  schemas.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/api/: excel.py  plans.py  regular.py  simulation.py  tax.py  transactions.py
backend/app/core/: tax_calculator.py
backend/routers/: analytics.py  files.py  sync.py  transactions.py
backend/services/: finance_api.py
data/: 카카오페이_다운로드내역_260105234628.csv  카카오페이_다운로드내역_260105234628.xlsx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AssetSimulation.jsx  BankSync.jsx  BudgetPlanner.jsx  Dashboard.jsx  ExcelImport.jsx  FileManager.jsx  RegularTransactions.jsx  TransactionForm.jsx  TransactionList.jsx
frontend/src/services/: api.js
